...
            verticalArrangement = Arrangement.SpaceAround
        ) {
            SdkCard(
                modifier = Modifier
                    .height(189.dp)
                    .fillMaxWidth()
                    .testTag("signatureView"),
                color = AppTheme.colors.disabled.copy(0.2F)
            ) {
                var onSigned = false
                SignaturePadView(
                    onReady = {
                        signaturePadAdapter = it
...
                )

                RoundButton(
                    modifier = Modifier
                        .height(44.dp)
                        .width(144.dp)
                        .testTag("signatureDoneButton"),
                    text = "Sign",
                    border = BorderStroke(width = 1.dp, color = AppTheme.colors.primary),
                    onClick = {
                        mutableSvg.value =
                            if (signaturePadAdapter?.isEmpty!!) "" else signaturePadAdapter?.getSignatureSvg()!!
                        onClickDone(mutableSvg.value)
...
