...
                        onClickPad()
                    },
            ) {
                if (signature.isBlank())
                    Text(
                        modifier = Modifier.align(alignment = Alignment.Center),
                        text = "Tap to sign.",
                        style = AppTheme.typography.body1,
                        color = AppTheme.colors.onSurface
                    )
                else
                    Surface(
                        modifier = Modifier.fillMaxSize(),
...
